# claimlint

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
adapters/: status.yml
adapters/claude-code/: README.md  install.sh
adapters/codex/: README.md  SMOKE.md  VERIFY.md  install.ps1  install.sh
docs/: adapter_contract.md  architecture.md  claim_taxonomy.md  environment.md  implementation_map.md  manifest_contract.md  runtime_contract.md  verdict_rules.md  workflow_contract.md
examples/bounded-monocular-perception/: input_manifest.yml
examples/claimlint-20260607-1757Z/: claims.jsonl  claims_report.md  evidence_packet.md  remediation_tasks.md  run_manifest.json
examples/claimlint-self-audit/: claimlint-github-manifest.yml  smoke_test.md
schemas/: audit_summary.schema.json  claim_record.schema.json  run_manifest.schema.json
skills/claimlint/: SKILL.md
skills/clipboard-raccoon/: SKILL.md
src/claimlint/: __init__.py  classify_claims.py  cli.py  extract_claims.py  ingest_markdown.py  judge_support.py  manifest.py  model_backends.py  render_report.py  retrieve_evidence.py  run_manifest.py  schemas.py  types.py
src/clipboard_raccoon/: classify_claims.py  cli.py  extract_claims.py  ingest_markdown.py  judge_support.py  render_report.py  retrieve_evidence.py  run_manifest.py  types.py
tests/: test_claim_extraction.py  test_cli_audit.py  test_cli_audit_remote.py  test_codex_adapter.py  test_ingest_markdown.py  test_render_report.py  test_retrieve_evidence.py  test_schema_validation.py
workflows/: claim_audit.yml
(+18 files in other folders)
