[project]
name = "claimlint"
version = "0.1.0"
description = "Evidence-bounded repository claim auditor"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0"
]

[project.scripts]
claimlint = "claimlint.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
